# KexxuEye-Python-SDK

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: api.md  index.md
examples/: read_datafile.py
kexxu_eye_sdk/: __init__.py  format.py
src/kexxu_eye_sdk/: api.py  format.py  user.py
tests/: test_format.py
tests/data/: example-openeye-datafile.json
